sculptor-generator/sculptor-generator-core-test/src/test/resources/workflow-tests/missing/model.btdesign
Application Universe {
	basePackage=org.sculptor.examples.universe

	Module milkyway {

		Entity Planet {
			String name key
			- Set<@Moon> moons	// error

			Repository planetRepository {
				findByKeys;
				save;
			}
		}

	}

}
